Fix truffle project list background overflow bug

--- a/src/renderer/screens/config/ConfigScreen.scss
+++ b/src/renderer/screens/config/ConfigScreen.scss
@@ -228,6 +228,9 @@
     padding: .5rem .25rem;
     overflow: auto;
 
+    .projectItemContainer {
+      display: inline-block;
+    }
     .projectItem {
       padding: .25rem;
       margin: .25rem;
